--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
     </div>
 
     <div class="auth-box">
-        <h3>学习参考入口</h3>
-        <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="auth-btn" target="_blank">注册/登录学习平台</a>
-        <div class="contact-btn" onclick="showContact()">联系推荐人获取学习资料</div>
+        <h3>❤️新人注册免费送4张卷轴❤️</h3>
+        <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="auth-btn" target="_blank">注册/登录数字卷轴</a>
+        <div class="contact-btn" onclick="showContact()">联系推荐人快速认证领取卷轴</div>
     </div>
 
     <div id="contactModal">
         <div class="modal-content">
-            <h3>学习资料联系方式</h3>
+            <h3>推荐人联系方式</h3>
             <p>推荐人微信号：<strong>dsc_2025</strong></p>
-            <p>请注明"学习资料获取"</p>
+            <p>请注明"注册dsc"</p>
             <button class="close-btn" onclick="hideContact()">关闭</button>
         </div>
     </div>
