--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@ function calculateRuntime() {
     const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
     
     document.getElementById('running-time').innerHTML = 
-        `🕒 已稳定运行：${days} 天 ${hours} 小时 ${minutes} 分`;
+        `🕒 DSC已稳定运行：${days} 天 ${hours} 小时 ${minutes} 分`;
 }
 
 // 初始化
