--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ th, td {
         </div>
         
         <footer>
-            <p>© 2023 数字卷轴DSC平台 版权所有</p>
+            <p>© 2025 数字卷轴DSC平台</p>
             <p>基于卷界链技术构建 · 安全透明 · 多重收益</p>
         </footer>
     </div>
