--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ translateY(20px); }
         
         <div id="contactModal">
             <div class="modal-content">
-                <h3>联系推荐人获取快速认证</h3>
+                <h3>联系推荐人领取新人福利</h3>
                 <p>请复制以下微信号联系推荐人：</p>
                 <div class="wechat-container">
                     <span class="wechat-id" id="wechatId">dsc_2025</span>
@@ -703,7 +703,7 @@ translateY(20px); }
         </div>
         
         <footer>
-            <p>© 2023 数字卷轴DSC平台 版权所有</p>
+            <p>© 2025 数字卷轴DSC</p>
             <p>基于卷界链技术构建 · 安全透明 · 多重收益</p>
         </footer>
     </div>
