--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ border: none;
     <div class="container">
         <header>
             <div class="header-title-container">
-                <img src="Digital-Scroll/images/logo.png" alt="数字卷轴DSC Logo" class="logo">
+                <img src="images/logo.png" alt="logo" class="logo">
                 <h1>数字卷轴DSC</h1>
             </div>
 
