--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             --dark-color: #333;
             --light-color: #fff;
             --accent-color: #FFE74C;
+            --guide-color: #4CAF50; /* 新增操作指南按钮颜色 */
         }
         /* 新增logo与标题对齐样式 */
         .header-title-container {
