--- a/guide.html
+++ b/guide.html
@@ -25,15 +25,16 @@
             display: flex;
             align-items: center;
             margin-bottom: 30px;
+            gap: 15px;
         }
 
         .home-btn {
             background: var(--primary-color);
-            color: white!important;
-            padding: 8px 15px;
+            color: white;
+            padding: 8px 20px;
             border-radius: 20px;
             text-decoration: none;
-            margin-right: 15px;
+            font-weight: 500;
         }
 
         .logo {
@@ -43,9 +44,16 @@
         .section {
             background: white;
             border-radius: 12px;
-            padding: 20px;
+            padding: 25px;
             margin-bottom: 25px;
             box-shadow: 0 3px 15px rgba(0,0,0,0.08);
+        }
+
+        h1 {
+            color: var(--primary-color);
+            border-bottom: 2px solid var(--highlight-color);
+            padding-bottom: 10px;
+            margin-bottom: 30px;
         }
 
         h2 {
@@ -57,38 +65,51 @@
 
         code {
             background: #f8f9fa;
-            padding: 2px 6px;
+            padding: 3px 8px;
             border-radius: 4px;
             border: 1px solid #dee2e6;
             font-family: monospace;
+            margin: 0 2px;
         }
 
         .alert {
-            padding: 15px;
+            padding: 18px;
             border-radius: 8px;
-            margin: 20px 0;
+            margin: 25px 0;
         }
 
         .alert-warning {
             background: #fff3e6;
             border: 1px solid #ffd8b3;
+            color: #cc5500;
         }
 
         .alert-info {
             background: #e6f3ff;
             border: 1px solid #b3d8ff;
+            color: #004799;
         }
 
         img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
-            margin: 15px 0;
+            margin: 20px 0;
             border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
 
         .highlight {
             color: var(--highlight-color);
-            font-weight: 500;
+            font-weight: 600;
+        }
+
+        ul, ol {
+            padding-left: 25px;
+            margin: 10px 0;
+        }
+
+        li {
+            margin-bottom: 8px;
         }
 
         @media (max-width: 480px) {
@@ -96,8 +117,10 @@
                 font-size: 16px;
                 padding: 15px;
             }
-            
             .section {
+                padding: 18px;
+            }
+            .alert {
                 padding: 15px;
             }
         }
@@ -105,7 +128,7 @@
 </head>
 <body>
     <nav class="nav">
-        <a href="index.html" class="home-btn">首页</a>
+        <a href="index.html" class="home-btn">返回首页</a>
         <img src="images/logo.png" alt="DSC Logo" class="logo">
     </nav>
 
