--- a/guide.html
+++ b/guide.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSC注册与挖矿操作图文教程</title>
+    <title>DSC注册与挖矿图文教程</title>
     <style>
         :root {
             --primary-bg: #f5f7fb;
