--- a/guide.html
+++ b/guide.html
@@ -198,7 +198,7 @@
     <div class="container">
         <header>
             <img src="images/logo.png" alt="DSC Logo" class="logo" onclick="window.location.href='index.html'">
-            <h1>DSC注册与挖矿操作图文教程</h1>
+            <h1>DSC注册与挖矿图文教程</h1>
         </header>
         
         <a href="index.html" class="home-link">返回首页</a>
