--- a/index.html
+++ b/index.html
@@ -780,13 +780,12 @@
             </ul>
             
             <h3>交易手续费</h3>
-            <p>手续费根据推广情况和活跃度分级：</p>
+            <p>交易手续费25%：</p>
             <ul>
-                <li>新用户初始手续费: 100%</li>
-                <li>上月新注册直推3位: 60%</li>
-                <li>上月新注册直推7位: 50%</li>
-                <li>上月新注册直推10位或自身活跃度>0: 45%</li>
-                <li>最高可降至20%或免手续费</li>
+                <li>普通玩家DSC卖出手续费为25%</li>
+                <li>玩家购买官方币，可积累免手续费额度。于额度内卖出，免手续费</li>
+                <li>市商免手续费，官方免手续</li>
+
             </ul>
             
             <h3>注意事项</h3>
