--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="auth-btn" id="registerBtn">立即注册/登录</a>
                 <button class="contact-btn" onclick="showContactModal()">联系推荐人获取快速认证</button>
                 <a href="guide.html" class="guide-btn">操作指南</a>
-                <a href="moxing.htm" class="model-btn">经济模型</a> <!-- 新增按钮 -->
+                <a href="moxing.htmll" class="model-btn">经济模型</a> <!-- 新增按钮 -->
             </div>
         </header>
         
