--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             
             <div class="auth-box">
                 <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="auth-btn" id="registerBtn">注册/登录</a>
-                <button class="contact-btn" onclick="showContactModal()">联系上级</button>
+                <button class="contact-btn" onclick="showContactModal()">快速认证</button>
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a> 
             </div>
