--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #FF6B35;
-            --secondary-color: #FFA630;
-            --dark-color: #333;
-            --light-color: #fff;
-            --accent-color: #FFE74C;
-            --register-btn: #4CAF50;
-            --contact-btn: #2196F3;
-            --guide-btn: #9C27B0;
-            --model-btn: #D32F2F;
-        }
+    --primary-color: #FF6B35;
+    --secondary-color: #FFA630;
+    --dark-color: #333;
+    --light-color: #fff;
+    --accent-color: #FFE74C;
+    --register-btn: #4CAF50;
+    --contact-btn: #2196F3;
+    --guide-btn: #9C27B0;
+    --model-btn: #000080; /* 已修改为深蓝色 */
+}
         
         * {
             margin: 0;
@@ -44,7 +44,7 @@
         }
 
         .model-btn:hover {
-            background: #B71C1C;
+            background: #00004B;
             transform: translateY(-5px);
             box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
         }
