--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 <tr>
                     <td>试炼卷轴</td>
                     <td>注册送</td>
-                    <td>0.03 DSC</td>
+                    <td>0.06 DSC</td>
                     <td>永久</td>
                 </tr>
                 <tr>
@@ -808,6 +808,8 @@
             <h3>卷轴增产设定</h3>
             <p>高级级别卷轴可以通过推广活跃用户增加日产收益：</p>
             <ul>
+                <li>青铜卷轴：上月直推每+1位(活跃度≥3),日产+0.01，封顶0.07(推1位)</li>
+                <li>白银卷轴：上月直推每+1位(活跃度≥3),日产+0.05，封顶0.7(推2位)</li>
                 <li>黄金卷轴：上月直推每+1位(活跃度≥3),日产+0.35，封顶7.33(推8位)</li>
                 <li>铂金卷轴：上月直推每+1位(活跃度≥3),日产+1，封顶38.33(推15位)</li>
                 <li>钻石卷轴：上月直推每+1位(活跃度≥3),日产+1.3，封顶83.32(推25位)</li>
@@ -848,13 +850,6 @@
                 <li>否则：奖励间推卷轴收益的1.5%</li>
             </ul>
             
-            <h3>推广活动月</h3>
-            <p>每月为推广活动月，分为三个时段提供不同奖励：</p>
-            <ul>
-                <li>1日至10日：新用户兑换青铜或白银卷轴，立返20%租金</li>
-                <li>11日至20日：上级奖励卷轴满产的5%或3%</li>
-                <li>21日至月末：新用户兑换青铜或白银卷轴，上级奖励卷轴满产的45%或20%</li>
-            </ul>
         </div>
         
         <div id="trading" class="content-section">
