--- a/youxi.html
+++ b/youxi.html
@@ -417,7 +417,7 @@
             <div class="game-header" onclick="toggleGame(this, 'miningGame')">
                 <span class="game-name">
                     掘金引擎
-                  <span class="coming-soon">近期上线</span>
+                  <span class="coming-soon">新上线</span>
                 </span>
                 <span>▼</span>
             </div>
@@ -558,7 +558,7 @@
                 
                 <div class="game-tips">
                     <p class="tips-title">温馨提示</p>
-                    <p>掘金引擎是一种创新游戏模式，请仔细阅读规则后再参与。游戏10号左右上线，敬请期待！</p>
+                    <p>掘金引擎是一种创新游戏模式，请仔细阅读规则后再参与。</p>
                 </div>
             </div>
         </div>
