--- a/youxi.html
+++ b/youxi.html
@@ -474,7 +474,7 @@
                                 <td>决胜阶段</td>
                                 <td>≥20,000</td>
                                 <td>30币</td>
-                                <td>+30秒</td>
+                                <td>+1分钟</td>
                                 <td>-</td>
                             </tr>
                         </tbody>
@@ -519,24 +519,26 @@
                                         <tbody>
                                             <tr>
                                                 <td>100%</td>
-                                                <td>阶段前10%投注者</td>
+                                                <td>阶段一至阶段四，前10%投注</td>
                                             </tr>
                                             <tr>
                                                 <td>70%</td>
-                                                <td>阶段前30%投注者</td>
+                                                <td>阶段一至阶段四，前30%投注</td>
                                             </tr>
                                             <tr>
                                                 <td>50%</td>
-                                                <td>阶段前50%投注者</td>
+                                                <td>阶段一至阶段四，前50%投注</td>
                                             </tr>
                                             <tr>
                                                 <td>30%</td>
-                                                <td>阶段前70%投注者</td>
+                                                <td>阶段一至阶段四，前70%投注</td>
+                                            </tr>
+
+<td>100%</td>
+                                                <td>阶段五随机取1/5的投注</td>
                                             </tr>
                                         </tbody>
                                     </table>
-                                </li>
-                                <li><strong>幸运返还</strong>：5%（随机抽取阶段5的投注者进行全额返还）</li>
                             </ul>
                         </li>
                         <li><strong>奖池资金分配</strong>
@@ -544,8 +546,8 @@
                                 <li><strong>预留资金</strong>：1,000币（作为下一轮种子）</li>
                                 <li><strong>剩余分配</strong>：
                                     <ul>
-                                        <li>最后投注者：45%</li>
-                                        <li>倒数2-10名投注者：8%（均分）</li>
+                                        <li>最后投注者：48%</li>
+                                        <li>倒数2-10名投注者：10%（均分）</li>
                                         <li>运营方：7%</li>
                                         <li>销毁：25%</li>
                                         <li>推荐奖励：10%</li>
