--- a/youxi.html
+++ b/youxi.html
@@ -416,7 +416,7 @@
         <div class="game-card">
             <div class="game-header" onclick="toggleGame(this, 'miningGame')">
                 <span class="game-name">
-                    掘金引擎
+                    掘金Fomo3D
                   <span class="coming-soon">新上线</span>
                 </span>
                 <span>▼</span>
@@ -439,21 +439,21 @@
                                 <td>阶段1</td>
                                 <td>1,000-1,999</td>
                                 <td>1币</td>
-                                <td>+5分钟</td>
+                                <td>+3分钟</td>
                                 <td>1,000次</td>
                             </tr>
                             <tr>
                                 <td>阶段2</td>
                                 <td>2,000-4,999</td>
                                 <td>2币</td>
-                                <td>+4分钟</td>
+                                <td>+2分钟</td>
                                 <td>1,500次</td>
                             </tr>
                             <tr>
                                 <td>阶段3</td>
                                 <td>5,000-9,999</td>
                                 <td>5币</td>
-                                <td>+3分钟</td>
+                                <td>+2分钟</td>
                                 <td>1,000次</td>
                             </tr>
                             <tr>
@@ -467,7 +467,7 @@
                                 <td>阶段5</td>
                                 <td>15,000-19,999</td>
                                 <td>20币</td>
-                                <td>+1分钟</td>
+                                <td>+2分钟</td>
                                 <td>250次</td>
                             </tr>
                             <tr>
@@ -487,7 +487,7 @@
                         <li><strong>初始设置</strong>
                             <ul>
                                 <li>初始奖池：1,000币</li>
-                                <li>初始开奖倒计时：12小时</li>
+                                <li>初始开奖倒计时：6小时</li>
                             </ul>
                         </li>
                         <li><strong>倒计时机制</strong>
@@ -560,7 +560,7 @@
                 
                 <div class="game-tips">
                     <p class="tips-title">温馨提示</p>
-                    <p>掘金引擎是一种创新游戏模式，请仔细阅读规则后再参与。</p>
+                    <p>掘金Fomo3D是一种创新游戏模式，请仔细阅读规则后再参与。</p>
                 </div>
             </div>
         </div>
