--- a/youxi.html
+++ b/youxi.html
@@ -568,7 +568,7 @@
     
     <!-- 底部区域 -->
     <footer class="page-footer">
-        <h3 class="footer-title">欢迎加入DSC生态游戏</h3>
+        <h3 class="footer-title">DSC生态游戏边玩游戏边挖币</h3>
         <p class="footer-desc">数字卷轴DSC致力于打造完整的区块链游戏生态系统，未来将推出更多创新游戏，为用户提供更多元的娱乐和收益方式。</p>
         <p class="footer-desc">关注本站，获取最新游戏上线信息。</p>
         <p class="footer-copyright">© 2023 数字卷轴DSC 卷界链 | 基于区块链技术的创新生态游戏系统</p>
