--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         <div class="days" id="days">00天</div>
         <div class="time" id="time">00:00:00</div>
     </div>
-    <div class="timer-motto">无人扶我青云志，我自挖矿到巅峰</div>
+    <div class="timer-motto">无人扶我青云志，我自挖矿至巅峰</div>
 </div>
             
             <div class="auth-box">
