--- a/youxi.html
+++ b/youxi.html
@@ -445,7 +445,7 @@
                             <tr>
                                 <td>阶段2</td>
                                 <td>2,000-4,999</td>
-                                <td>2币</td>
+                                <td>3币</td>
                                 <td>+2分钟</td>
                                 <td>1,500次</td>
                             </tr>
@@ -487,17 +487,19 @@
                         <li><strong>初始设置</strong>
                             <ul>
                                 <li>初始奖池：1,000币</li>
-                                <li>初始开奖倒计时：6小时</li>
+                                <li>初始开奖倒计时：5小时</li>
                             </ul>
                         </li>
                         <li><strong>倒计时机制</strong>
                             <ul>
                                 <li>每次投注根据阶段延长倒计时（见上表），倒计时归零即开奖。</li>
+  <ul>
+      <li>0:00至08:00期间，暂停游戏<li>
                             </ul>
                         </li>
                         <li><strong>决胜阶段投注条件</strong>
                             <ul>
-                                <li>1至5阶段均有参与投注者，方可参与决胜局的投注意竞争。</li>
+                                <li>玩家当期一至五阶段都参与了投注，或者当期累计投满50币，方可参与决胜局投注竞争。</li>
                             </ul>
                         </li>
                     </ul>
