--- a/youxi.html
+++ b/youxi.html
@@ -494,9 +494,9 @@
                             <ul>
                                 <li>每次投注根据阶段延长倒计时（见上表），倒计时归零即开奖。</li>
   <ul>
-      <li>0:00至08:00期间，暂停游戏<li>
+      <li>0:00至08:00期间，暂停游戏。<li>
                             </ul>
-                        </li>
+                        
                         <li><strong>决胜阶段投注条件</strong>
                             <ul>
                                 <li>玩家当期一至五阶段都参与了投注，或者当期累计投满50币，方可参与决胜局投注竞争。</li>
@@ -521,19 +521,27 @@
                                         <tbody>
                                             <tr>
                                                 <td>100%</td>
-                                                <td>阶段一至阶段四，前10%投注</td>
+                                                <td>阶段一前50%投注，阶段二至阶段四，前10%投注</td>
                                             </tr>
                                             <tr>
+
+<tr>75%</td>
+
+<td>阶段一前75%投注
+
+<tr>
+
+<tr>
                                                 <td>70%</td>
-                                                <td>阶段一至阶段四，前30%投注</td>
+                                                <td>阶段二至阶段四，前30%投注</td>
                                             </tr>
                                             <tr>
                                                 <td>50%</td>
-                                                <td>阶段一至阶段四，前50%投注</td>
+                                                <td>阶段一前100%投注，阶段二至阶段四，前70%投注</td>
                                             </tr>
                                             <tr>
                                                 <td>30%</td>
-                                                <td>阶段一至阶段四，前70%投注</td>
+                                                <td>阶段二至阶段四，前70%投注</td>
                                             </tr>
 
 <td>100%</td>
