--- a/youxi.html
+++ b/youxi.html
@@ -510,7 +510,7 @@
                     <ul class="game-feature">
                         <li><strong>开奖后，先进行阶段投注资金返还，再进行奖池资金分配</strong>
                             <ul>
-                                <li><strong>阶段投注资金返还（仅阶段1-4）</strong>
+                                <li><strong>阶段投注资金返还</strong>
                                     <table class="game-table">
                                         <thead>
                                             <tr>
@@ -525,11 +525,10 @@
                                             </tr>
                                             <tr>
 
-<tr>75%</td>
+<td>75%</td>
 
-<td>阶段一前75%投注
-
-<tr>
+<td>阶段一前75%投注<td>
+</tr>
 
 <tr>
                                                 <td>70%</td>
