--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
         
         <div id="promotion" class="content-section">
             <h2>推广奖励机制</h2>
-            <p>推广下级，永久享下级收益的10%奖励。</p>
+            <p>推广下级，永久享下级收益的10%奖励。推广下级也可竞争节点，获取更多奖励。</p>
             <p>下级兑换卷轴或复投卷轴上级可享每日分红。</p>
             
             <h3>推广收益规则</h3>
