--- a/index.html
+++ b/index.html
@@ -905,7 +905,9 @@
     <h3>治理规则说明</h3>
     <div class="rules-container">
         <div class="rule-box critical">
-            <h4>核心治理领域</h4>
+            <h3>核心治理领域
+
+</h3>
             <ul>
                 <li>卷轴产出规则调整</li>
                 <li>智能合约升级</li>
@@ -913,7 +915,9 @@
             </ul>
         </div>
         <div class="rule-box normal">
-            <h4>技术自治领域</h4>
+            <h3>技术自治领域
+
+</h3>
             <ul>
                 <li>前端界面更新</li>
                 <li>游戏参数调整</li>
