--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     --guide-btn: #9C27B0;
     --model-btn: #D32F2F;
     --game-btn: #1A237E; /* 新增的生态游戏按钮颜色 */
+    --consensus-btn: #4CAF50; /* 社区共识浅绿色背景 */
+}
+           .consensus-btn {
+    background: var(--consensus-btn);
+}
+
+.consensus-btn:hover {
+    background: #3e8e41;
 }
         
         * {
@@ -796,6 +804,7 @@
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a> 
                 <a href="youxi.html" class="game-btn">生态游戏</a> <!-- 新增的生态游戏按钮 -->
+                <button class="btn consensus-btn" onclick="window.location.href='shequgongshi.html'">社区共识</button>
             </div>
         </header>
         
