更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -438,22 +438,22 @@
         <!-- 标题区域 -->
         <div class="header-content">
             <h1>数字卷轴DSC社区共识</h1>
-            <p class="subtitle">共识日期：2023年6月3日</p>
+            <p class="subtitle">共识日期：2025年6月3日</p>
         </div>
         
         <!-- 统计信息栏 -->
         <div class="stats-bar">
             <div class="stat-item">
                 <div class="stat-value">72</div>
-                <div class="stat-label">共识成员</div>
+                <div class="stat-label">共识成员(陆续增加中)</div>
             </div>
             <div class="stat-item">
                 <div class="stat-value">1,245,380</div>
-                <div class="stat-label">DSC总质押</div>
+                <div class="stat-label">DSC共识总质押</div>
             </div>
             <div class="stat-item">
                 <div class="stat-value">38,726.54</div>
-                <div class="stat-label">SCC总质押</div>
+                <div class="stat-label">SCC共识总余额</div>
             </div>
         </div>
         
