--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -527,8 +527,8 @@
         let filteredData = [];
         let consensusData = [];
         
-// CSV文件URL（替换为您的GitHub CSV文件URL）
-        const CSV_URL = "https://raw.githubusercontent.com/boipc/Digital-Scroll/main/data.csv";
+       // 在JavaScript部分找到这行代码
+const CSV_URL = 'https://raw.githubusercontent.com/Doipc/Digital-Scroll/main/data.csv';
         
         // 格式化昵称显示：只显示第一个字，后面用***
         function formatName(name) {
