--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -492,7 +492,7 @@
         <table class="consensus-table" id="consensusTable">
             <thead>
                 <tr>
-                    <th data-sort="wechatName">微信昵称 <i class="fas fa-sort"></i></th>
+              <!--    <th data-sort="wechatName">微信昵称 <i class="fas fa-sort"></i></th>   -->
                     <th data-sort="dscName">DSC昵称 <i class="fas fa-sort"></i></th>
                     <th data-sort="address">卷界地址 <i class="fas fa-sort"></i></th>
                     <th data-sort="dscStaked">DSC质押 <i class="fas fa-sort"></i></th>
