--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -435,7 +435,7 @@
         
         <!-- 社区共识语 -->
         <div class="consensus-statement">
-            我们，数字卷轴DSC社区成员，秉持开放、共享、协作的精神，共同承诺：<br>
+            数字卷轴DSC社区成员，秉持开放、共享、协作的精神，共同承诺：<br>
             坚守共识低价，保障生态稳定；<br>
             推动价值流通，促进社区繁荣；<br>
             坚持公平透明，维护成员权益；<br>
@@ -492,7 +492,7 @@
         <table class="consensus-table" id="consensusTable">
             <thead>
                 <tr>
-              <!--    <th data-sort="wechatName">微信昵称 <i class="fas fa-sort"></i></th>   -->
+              <!-- <th data-sort="wechatName">微信昵称 <i class="fas fa-sort"></i></th> 
                     <th data-sort="dscName">DSC昵称 <i class="fas fa-sort"></i></th>
                     <th data-sort="address">卷界地址 <i class="fas fa-sort"></i></th>
                     <th data-sort="dscStaked">DSC质押 <i class="fas fa-sort"></i></th>
@@ -687,7 +687,6 @@
                 filteredData = [...consensusData];
             } else {
                 filteredData = consensusData.filter(item => 
-                    item.wechatName.toLowerCase().includes(searchTerm) || 
                     item.dscName.toLowerCase().includes(searchTerm) || 
                     item.address.toLowerCase().includes(searchTerm)
                 );
@@ -735,10 +734,9 @@
                 const row = document.createElement('tr');
                 
                 row.innerHTML = `
-                    <td>${formatName(item.wechatName)}</td>
-                    <td>${formatName(item.dscName)}</td>
-                    <td class="address-cell" ondblclick="copyToClipboard('${item.address}')">
-                        ${formatAddress(item.address)}
+    <td>${formatName(item.dscName)}</td>
+    <td class="address-cell" ondblclick="copyToClipboard('${item.address}')">
+        ${formatAddress(item.address)}
                     </td>
                     <td>${item.dscStaked.toLocaleString()}</td>
                     <td>${item.dscAvailable.toFixed(2)}</td>
