--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -181,7 +181,21 @@
             color: #a0aec0;
             text-align: center;
         }
-        
+         /* 新增页脚样式 */
+    .footer {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px 0;
+        text-align: center;
+    }
+    
+    .footer-slogan {
+        font-size: 1.2rem;
+        color: #3498db;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        letter-spacing: 1px;
+        font-weight: 500;
+    }
         /* 共识表格 */
         .consensus-table {
             width: 100%;
