--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
             <h3>项目特色</h3>
             <ul>
                 <li>每小时自动产生收益</li>
-                <li>多重收益来源：卷轴收益、推广收益和每日分红收益</li>
+                <li>多重收益来源：卷轴收益、推广收益、共享矿机收益和每日分红收益</li>
                 <li>透明公开的区块链技术保障</li>
                 <li>24小时全天候交易</li>
                 <li>多级别卷轴满足不同投资需求</li>
@@ -1125,7 +1125,7 @@
         </div>
         
         <footer>
-            <p>© 2023 数字卷轴DSC 卷界链</p>
+            <p>© 2025 数字卷轴DSC 卷界链</p>
             <p>基于卷界链技术构建 · 安全透明 · 多重收益</p>
         </footer>
     </div>
