--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a> 
                 <a href="youxi.html" class="game-btn">生态游戏</a> <!-- 新增的生态游戏按钮 -->
-                <button class="btn consensus-btn" onclick="window.location.href='shequgongshi.html'">社区共识</button>
+                <button class="btn consensus-btn" onclick="window.location.href='shequgongshi.html'">股东制度</button>
             </div>
         </header>
         
