更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -368,7 +368,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual" data-level="1">点击输入数量</div>
+                        <div class="virtual" data-level="1">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
@@ -386,7 +386,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual" data-level="2">点击输入数量</div>
+                        <div class="virtual" data-level="2">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
@@ -405,7 +405,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual" data-level="3">点击输入数量</div>
+                        <div class="virtual" data-level="3">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual" data-level="4">点击输入数量</div>
+                        <div class="virtual" data-level="4">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
@@ -446,7 +446,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual" data-level="5">点击输入数量</div>
+                        <div class="virtual" data-level="5">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
