更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -569,8 +569,8 @@
         setTimeout(() => {
             document.querySelector('[data-level="1"]').innerHTML = "16";
             document.querySelector('[data-level="2"]').innerHTML = "93";
-            document.querySelector('[data-level="3"]').innerHTML = "403";
-            document.querySelector('[data-level="4"]').innerHTML = "1206";
+            document.querySelector('[data-level="3"]').innerHTML = "157";
+            document.querySelector('[data-level="4"]').innerHTML = "虚位以待";
         }, 1500);
     </script>
 </body>
