更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -454,7 +454,7 @@
         </div>
         
         <div class="footer">
-            星级达人升红计划 · 尊享每日分红
+            星级达人升星计划 · 尊享每日分红
         </div>
     </div>
 
