更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -610,7 +610,7 @@
                 <div class="reward-row">
                     <div class="reward-label">分红奖励</div>
                     <div class="reward-value">
-                        <div class="virtual placeholder" data-level="1">字体颜色不要阴影1</div>
+                        <div class="virtual placeholder" data-level="1">虚位以待</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
                 </div>
@@ -994,4 +994,5 @@
     </script>
 
 
-    </body></html>
+    </body>
+</html>
