更新 shequgongshi.html

--- a/shequgongshi.html
+++ b/shequgongshi.html
@@ -742,7 +742,7 @@
             <!-- 添加主页链接 -->
             <a href="index.html" class="logo-link">
                 <div class="logo">
-                    <img src="images/logo.png" class="logo-icon">
+                    <img src="images/logo01.png" class="logo-icon">
                     <h1>DSC股东分红</h1>
                 </div>
             </a>
@@ -777,7 +777,7 @@
                 <div class="data-item">
                     <div class="data-label">人均分红</div>
                     <div class="data-value">
-                        <img src="images/logo.png" class="coin-icon">
+                        <img src="images/logo01.png" class="coin-icon">
                         <div class="virtual placeholder" data-level="1" data-type="dividend" data-percentage="5">0</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
@@ -808,7 +808,7 @@
                 <div class="data-item">
                     <div class="data-label">人均分红</div>
                     <div class="data-value">
-                        <img src="images/logo.png" class="coin-icon">
+                        <img src="images/logo01.png" class="coin-icon">
                         <div class="virtual placeholder" data-level="2" data-type="dividend" data-percentage="15">0</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
@@ -840,7 +840,7 @@
                 <div class="data-item">
                     <div class="data-label">人均分红</div>
                     <div class="data-value">
-                        <img src="images/logo.png" class="coin-icon">
+                        <img src="images/logo01.png" class="coin-icon">
                         <div class="virtual placeholder" data-level="3" data-type="dividend" data-percentage="20">0</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
@@ -873,7 +873,7 @@
                 <div class="data-item">
                     <div class="data-label">人均分红</div>
                     <div class="data-value">
-                        <img src="images/logo.png" class="coin-icon">
+                        <img src="images/logo01.png" class="coin-icon">
                         <div class="virtual placeholder" data-level="4" data-type="dividend" data-percentage="15">0</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
@@ -907,7 +907,7 @@
                 <div class="data-item">
                     <div class="data-label">人均分红</div>
                     <div class="data-value">
-                        <img src="images/logo.png" class="coin-icon">
+                        <img src="images/logo01.png" class="coin-icon">
                         <div class="virtual placeholder" data-level="5" data-type="dividend" data-percentage="15">0</div>
                         <span class="dsc-unit">DSC</span>
                     </div>
