--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     <div class="days" id="days">00天</div>
                     <div class="time" id="time">00:00:00</div>
                 </div>
-                <div class="timer-motto">无人扶我青云志，我自挖矿至巅峰。<br>若是命中无此运，亦可孤身登昆仑。。</div>
+                <div class="timer-motto">无人扶我青云志，我自挖矿至巅峰。<br>若是命中无此运，亦可孤身登昆仑。</div>
             </div>
             
             <div class="auth-grid">
@@ -633,7 +633,7 @@
             <h3>项目特色</h3>
             <ul>
                 <li>每小时自动产生收益</li>
-                <li>多重收益来源：卷轴收益、推广收益、共享矿机收益</li>
+                <li>多重收益来源：卷轴收益、推广收益、共享矿机收益、股东分红</li>
                 <li>透明公开的区块链技术保障</li>
                 <li>24小时全天候交易</li>
             </ul>
