--- a/moxing.html
+++ b/moxing.html
@@ -137,7 +137,7 @@
                 
                 <a href="index.html" class="flex items-center justify-center mb-3 relative">
                     <!-- 修改logo路径 -->
-                    <img src="https://via.placeholder.com/48x48?text=Logo" class="h-12 w-12 mr-2" alt="logo">
+                    <img src="images/logo01.png" class="h-12 w-12 mr-2" alt="logo">
                     <h2 class="text-[1.1rem] font-bold text-accent">SCC经济模型</h2>
                 </a>
                 
