--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <button class="contact-btn" onclick="showContactModal()">快速认证</button>
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a>
-                <a href="youxi.html" class="game-btn">生态游戏</a>
+                <a href="youxi.html" class="game-btn">复投计算</a>
                 <a href="gudongzhidu.html" class="shareholder-btn">股东制度</a>
             </div>
         </header>
