--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             <div class="auth-grid">
                 <!-- 修改按钮链接和样式 -->
                 <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="auth-btn" id="registerBtn">注册/登录</a>
-                <a href="xuyuan.html" class="contact-btn">卷轴学院</a>
+                <a href="xueyuan.html" class="contact-btn">卷轴学院</a>
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a>
                 <a href="youxi.html" class="game-btn">生态游戏</a>
