--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 <a href="xueyuan.html" class="contact-btn">卷轴学院</a>
                 <a href="guide.html" class="guide-btn">操作指南</a>
                 <a href="moxing.html" class="model-btn">经济模型</a>
-                <a href="youxi.html" class="game-btn">生态游戏</a>
+                <a href="youxi.html" class="game-btn">复投计算</a>
                 <a href="gudongzhidu.html" class="shareholder-btn">股东制度</a>
             </div>
         </header>
