更新 xueyuan.html

--- a/xueyuan.html
+++ b/xueyuan.html
@@ -343,7 +343,7 @@
             <div class="videos-container">
                 <!-- 视频1 -->
                 <div class="video-card">
-                    <div class="video-wrapper" onclick="openVideo('https://github.com/boipc/Digital-Scroll/raw/main/01.mp4')">
+                    <div class="video-wrapper" onclick="openVideo('https://cdn.jsdelivr.net/gh/boipc/Digital-Scroll@main/01.mp4')">
                         <div class="video-placeholder">
                             <div class="video-placeholder-text">数字卷轴DSC注册操作</div>
                         </div>
