--- a/youxi.html
+++ b/youxi.html
@@ -672,9 +672,9 @@
                 <div class="nav-icon"><i class="fas fa-chart-line"></i></div>
                 <div class="nav-text">经济模型</div>
             </a>
-            <a href="gudongzhidu.html" class="nav-item">
-                <div class="nav-icon"><i class="fas fa-handshake"></i></div>
-                <div class="nav-text">股东制度</div>
+            <a href="youxi.html" class="nav-item">
+                <div class="nav-icon"><i class="fas fa-calculator"></i></div>
+                <div class="nav-text">复投计算</div>
             </a>
             <a href="xueyuan.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-graduation-cap"></i></div>
