--- a/gudongzhidu.html
+++ b/gudongzhidu.html
@@ -1211,15 +1211,15 @@
             </a>
             <a href="guide.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-file-alt"></i></div>
-                <div class="nav-text">图文注册</div>
+                <div class="nav-text">操作指南</div>
             </a>
             <a href="moxing.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-chart-line"></i></div>
                 <div class="nav-text">经济模型</div>
             </a>
-            <a href="gudongzhidu.html" class="nav-item">
-                <div class="nav-icon"><i class="fas fa-handshake"></i></div>
-                <div class="nav-text">股东制度</div>
+            <a href="youxi.html" class="nav-item">
+                <div class="nav-icon"><i class="fas fa-calculator"></i></div>
+                <div class="nav-text">复投计算</div>
             </a>
             <a href="xueyuan.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-graduation-cap"></i></div>
