--- a/moxing.html
+++ b/moxing.html
@@ -753,7 +753,7 @@
             </a>
             <a href="guide.html" class="nav-item">
                 <div class="nav-icon"><i class="fa fa-file-text"></i></div>
-                <div class="nav-text">图文注册</div>
+                <div class="nav-text">操作指南</div>
             </a>
             <a href="youxi.html" class="nav-item">
                 <div class="nav-icon"><i class="fa fa-calculator"></i></div>
