--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
             </a>
             <a href="guide.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-file-alt"></i></div>
-                <div class="nav-text">图文注册</div>
+                <div class="nav-text">操作指南</div>
             </a>
             <a href="xueyuan.html" class="nav-item">
                 <div class="nav-icon"><i class="fas fa-graduation-cap"></i></div>
