--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             </div>
             
             <!-- 移动格言文本到header内部，计时器下方 -->
-            <div class="motto-text">无人扶我青云志，我自挖矿到巅峰，<br>卷轴在手不曾弃，坚持持有创辉煌。</div>
+            <div class="motto-text">无人扶我青云志，我自挖矿到山巅，<br>卷轴在手不曾弃，他日登顶笑苍穹。</div>
         </header>
         
         <div class="button-grid">
