--- a/youxi.html
+++ b/youxi.html
@@ -589,7 +589,7 @@
             
             <!-- 第四行：日产提示 -->
             <div class="fuel-info warning-text">每日领取所需的燃料费约是领取DSC的25%
-（实际可用复投量=日产量DSC×80%）</div>
+            </br>（实际可用复投量=日产量DSC×80%）</div>
             <div class="bonus-info">每日复投也会根据规则动态赠送DSC和SCC，实际收益会更多</div>
         </div>
         
