--- a/moxing.html
+++ b/moxing.html
@@ -561,7 +561,7 @@
                         季度推广排名前40的玩家，自动获得节点代理权
                     </p>
                     <p class="text-xs text-secondary text-center mt-1">
-                        <span class="font-bold">特殊规则：</span>五级股东可自动成为永久节点，无需季度考核
+                        <span class="font-bold">特殊规则：</span>前三名五级股东可自动成为永久节点，无需季度考核
                     </p>
                 </div>
                 
