--- a/moxing.html
+++ b/moxing.html
@@ -644,7 +644,7 @@
                     </h4>
                     
                     <p class="text-xs text-gray-300 mb-2">
-                        根据卷界链接核心协议规定，至少75%的数据节点运行相同版本，才能满足最低共识标准
+                        根据卷界链核心协议规定，至少75%的数据节点运行相同版本，才能满足最低共识标准
                     </p>
                     
                     <ul class="text-xs text-gray-300 space-y-1">
