--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
     <!-- 底部导航栏 -->
     <nav class="bottom-nav">
         <div class="nav-items">
-            <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" class="nav-item external-link" id="registerBtn">
+            <a href="https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C" class="nav-item external-link" id="registerBtn">
                 <div class="nav-icon"><i class="fas fa-user-plus"></i></div>
                 <div class="nav-text">注册/登录</div>
             </a>
