--- a/guide.html
+++ b/guide.html
@@ -240,7 +240,7 @@
         
         <div class="card">
             <h2>一、注册账号</h2>
-            <p>注册链接：<a href="https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C" class="register-link" target="_blank" id="registerLink">https://prod.digital-scroll.org/#/pages/reg?c=182N17</a></p>
+            <p>注册链接：<a href="https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C" class="register-link" target="_blank" id="registerLink">https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C</a></p>
             <img src="images/zuce_01.jpg" alt="注册账号界面" class="tutorial-img">
             <ol>
                 <li><span class="important">选择账号类型</span>：手机号或邮箱（勾选其一）。</li>
