更新 gudongzhidu.html

--- a/gudongzhidu.html
+++ b/gudongzhidu.html
@@ -1205,7 +1205,7 @@
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
                 <div class="nav-text">首页</div>
             </a>
-            <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" target="_blank" class="nav-item" id="registerLink">
+            <a href="https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C" target="_blank" class="nav-item" id="registerLink">
                 <div class="nav-icon"><i class="fas fa-user-plus"></i></div>
                 <div class="nav-text">注册/登录</div>
             </a>
