--- a/youxi.html
+++ b/youxi.html
@@ -661,7 +661,7 @@
                 <div class="nav-icon"><i class="fas fa-home"></i></div>
                 <div class="nav-text">首页</div>
             </a>
-            <a href="https://prod.digital-scroll.org/#/pages/reg?c=182N17" target="_blank" class="nav-item" id="register-link">
+            <a href="https://prod.digital-scroll.org/#/pages/reg?c=LcLh2C" target="_blank" class="nav-item" id="register-link">
                 <div class="nav-icon"><i class="fas fa-user-plus"></i></div>
                 <div class="nav-text">注册/登录</div>
             </a>
