更新 gudongzhidu.html

--- a/gudongzhidu.html
+++ b/gudongzhidu.html
@@ -1295,7 +1295,7 @@
 
         // 计算手续费详情
         function calculateFeeDetails() {
-            // 交易手续费分红 = 分红池 ÷ 70%
+            // 交易手续费分红 = 股东分红池 ÷ 70%
             const feeDividend = currentPoolAmount / 0.7;
             
             // 股东分红 = 交易手续费分红 × 70%
