更新 gudongzhidu.html

--- a/gudongzhidu.html
+++ b/gudongzhidu.html
@@ -825,7 +825,7 @@
                 </div>
                 <div class="modal-tip">
                     <i class="fas fa-calculator"></i>
-                    <div>手续费分红池 = 分红池 ÷ 70%</div>
+                    <div>手续费分红池 = 股东分红池 ÷ 70%</div>
                 </div>
                 <div class="modal-tip">
                     <i class="fas fa-percentage"></i>
