--- a/index.html
+++ b/index.html
@@ -965,10 +965,10 @@
         
         <div id="intro" class="content-section active">
             <h2>数字卷轴DSC项目介绍</h2>
-            <p>数字卷轴DSC是一个创新的数字资产增值项目，基于卷界链(Scroll Chain)技术开发，为用户提供多种收益方式。项目采用独特的卷轴模式，结合私有链与铭文碎片技术，通过租用+产币的方式，激励用户参与项目。DSC发行总量6亿枚。</p>
+            <p>数字卷轴DSC是一个创新的数字资产增值项目，基于卷界链(Scroll Chain)技术开发，为用户提供多种收益方式。项目采用独特的卷轴模式，结合私有链与铭文碎片技术，通过租用+产币的方式，激励用户参与项目。</p>
             
             <h3>DSC代币与智能合约</h3>
-            <p>DSC代币由卷轴团队通过卷界链发行。卷轴相关的智能合约均在链上执行，所有记录公开透明，用户可通过区块链浏览器实时查看。</p>
+            <p>DSC代币由卷轴团队通过卷界链发行，发行总量6亿枚。卷轴相关的智能合约均在链上执行，所有记录公开透明，用户可通过区块链浏览器实时查看。</p>
 
             <h3>节点自治与共识机制</h3>
             <p>卷界链采用节点自治的共识机制，节点每10秒打包一个区块，生成SCC燃料通证。总共45个节点，5个节点由官方预留，40个节点开放给全网玩家竞选。</p>
